--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@ footer {
 <footer>
   © 2025 — Pedro Cruz
   <p style="margin-top:8px; font-size:.8rem; opacity:.7;">
-    Contact: <a href="mailto:teuemail@exemplo.com" style="color:#eaeaea; text-decoration:none;">teuemail@exemplo.com</a>
+    Contact: <a href="mailto:pedroemcasa@gmail.com" style="color:#eaeaea; text-decoration:none;">pedroemcasa@gmail.com</a>
   </p>
 </footer>
 
