--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@ footer{
 
     <!-- PT -->
     <div class="lang-pt">
-      <a href="./projects/project-1.html">From Blue Walls to White Silence</a>
-      <a href="./projects/project-2.html">Under the Same Weather</a>
-      <a href="./projects/project-3.html">Inside the Sound</a>
-      <a href="./projects/project-4.html">Last Night</a>
+      <a href="./projects/project-1.html">Das Paredes Azuis ao Silêncio Branco</a>
+      <a href="./projects/project-2.html">Debaixo do Mesmo Tempo</a>
+      <a href="./projects/project-3.html">Dentro do Som</a>
+      <a href="./projects/project-4.html">A Última Noite</a>
       <a href="./projects/structures-of-permanence.html">Structures of Permanence</a>
     </div>
 
