--- a/about.html
+++ b/about.html
@@ -97,8 +97,8 @@ footer {
 
     <p>Ao longo dos anos, a prática manteve-se irregular e intuitiva, atravessada por períodos de silêncio e leitura. Muitas vezes, escolher não fotografar foi também uma forma de presença.</p>
 
-    <p>Entre a película, o laboratório e, mais tarde, o digital, fui construindo uma relação livre com a técnica, entendida como ferramenta e não como fim.</p>
-
+</p>Entre a película, o laboratório e, mais tarde, o digital, foi-se afirmando uma relação livre com a técnica, assumida simultaneamente como ferramenta e como fim.</p>
+    
     <p>Ao concluir o curso de Fotografia Digital Avançada no IPF – Instituto Português de Fotografia, aprofundei o trabalho com o uso de ficheiros RAW, a edição, a impressão e os suportes de apresentação.</p>
 
     <p>O meu trabalho continua a desenvolver-se num território de experimentação contínua, onde memória, tempo e imagem se cruzam sem hierarquias fixas.</p>
