--- a/projects/project-2.html
+++ b/projects/project-2.html
@@ -244,7 +244,7 @@ const images=[
 
 /* --- TITULOS PT --- */
 const captionsPT=[
-  "Flui",
+  "Fluir",
   "Dentro",
   "Passagem",
   "Entre",
@@ -311,8 +311,8 @@ document.addEventListener("keydown",e=>{
   }
 
   /* BETWEEN PROJECTS */
-  if(e.key==="ArrowLeft") window.location.href="project-4.html";
-  if(e.key==="ArrowRight") window.location.href="project-2.html";
+  if(e.key==="ArrowLeft") window.location.href="project-1.html";
+  if(e.key==="ArrowRight") window.location.href="project-3.html";
 });
 </script>
 
