--- a/projects/project-3.html
+++ b/projects/project-3.html
@@ -216,7 +216,7 @@ footer{
 <div class="project-nav">
   <a href="project-4.html">← Projecto anterior</a>
   <a href="../index.html">Home</a>
-  <a href="project-2.html">Projecto seguinte →</a>
+  <a href="structures-of-permanence.html">Projecto seguinte →</a>
 </div>
 
 <footer>© 2025 — Pedro Cruz</footer>
@@ -312,7 +312,7 @@ document.addEventListener("keydown",e=>{
 
   /* BETWEEN PROJECTS */
   if(e.key==="ArrowLeft") window.location.href="project-4.html";
-  if(e.key==="ArrowRight") window.location.href="project-1.html";
+  if(e.key==="ArrowRight") window.location.href="strutures-of-permanence.html";
 });
 </script>
 
