--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -219,9 +219,9 @@ footer{
 
 <!-- PROJECT NAV -->
 <div class="project-nav">
-  <a href="project-4.html">← Projecto anterior</a>
+  <a href="project-2.html">← Projecto anterior</a>
   <a href="../index.html">Home</a>
-  <a href="structures-of-permanence.html">Projecto seguinte →</a>
+  <a href="project-3.html">Projecto seguinte →</a>
 </div>
 
 <footer>© 2025 — Pedro Cruz</footer>
@@ -323,8 +323,8 @@ document.addEventListener("keydown",e=>{
   }
 
   /* BETWEEN PROJECTS */
-  if(e.key==="ArrowLeft") window.location.href="project-3.html";
-  if(e.key==="ArrowRight") window.location.href="structures-of-permanence.html";
+  if(e.key==="ArrowLeft") window.location.href="project-2.html";
+  if(e.key==="ArrowRight") window.location.href="project-3.html";
 });
 </script>
 
