--- a/projects/noi.html
+++ b/projects/noi.html
@@ -193,15 +193,14 @@ footer{
 </header>
 
 <section class="text">
-
   <div class="lang-pt">
-    <p>Esta série nasceu de uma deriva prolongada por Chefchaouen, uma cidade marcada por uma presença cromática intensa. Durante a estadia do autor, não nevava na região há dezassete anos, reforçando uma sensação de suspensão no tempo.</p>
-    <p>Ao longo da sequência, a cor dissolve-se progressivamente em branco, deslocando a percepção da saturação para o silêncio.</p>
+    <p>Esta série acompanha um espectáculo através da respiração, do som e da presença partilhada. Alternando entre o preto-e-branco e a cor, as fotografias seguem a coreografia silenciosa que rodeia a cena: o corpo que escuta, as negociações do espaço, os momentos de suspensão e de regresso.</p>
+    <p>Cada imagem abre um pequeno intervalo — um lugar onde o gesto abranda, a música circula e a comunidade se torna visível. O que permanece não é o registo do acontecimento, mas um eco: o corpo como partitura, o palco como campo de relações e, no fim, o agradecimento como gesto humano de fecho.</p>
   </div>
 
   <div class="lang-en" style="display:none;">
-    <p>This series emerged from an extended walk through Chefchaouen, a city defined by an overwhelming chromatic presence. During the artist’s stay, it had not snowed in the region for seventeen years, reinforcing a sense of temporal suspension.</p>
-    <p>As the sequence unfolds, colour dissolves into white, shifting perception from saturation toward silence.</p>
+    <p>This series follows a performance through breath, sound and shared presence. Moving between black-and-white and colour, the photographs trace the quiet choreography that surrounds the staged one: the listening body, the negotiations of space, the moments of suspension and return.</p>
+    <p>Each image opens a small interval — a place where gesture slows, music circulates, and community becomes visible. What remains is not a record of the event, but an echo: the body as score, the stage as a field of relations, and, finally, acknowledgement as a human closing gesture.</p>
   </div>
 
 </section>
@@ -211,9 +210,9 @@ footer{
   <div class="card" style="background-image:url('../assets/noi/noi02.jpg')" onclick="openLB(1)"></div>
   <div class="card" style="background-image:url('../assets/noi/noi03.jpg')" onclick="openLB(2)"></div>
   <div class="card" style="background-image:url('../assets/noi/noi04.jpg')" onclick="openLB(3)"></div>
-  <div class="card" style="background-image:url('../assets/noi/noi05.jpg.')" onclick="openLB(4)"></div>
-  <div class="card" style="background-image:url('../assets/noi/noi05.jpg')" onclick="openLB(5)"></div>
-  <div class="card" style="background-image:url('..../assets/noi/noi05.jpg')" onclick="openLB(6)"></div>
+  <div class="card" style="background-image:url('../assets/noi/noi05.jpg')" onclick="openLB(4)"></div>
+  <div class="card" style="background-image:url('../assets/noi/noi06.jpg')" onclick="openLB(5)"></div>
+  <div class="card" style="background-image:url('../assets/noi/noi07.jpg')" onclick="openLB(6)"></div>
 </section>
 
 <!-- PROJECT NAV -->
@@ -245,7 +244,7 @@ const images=[
   "../assets/noi/noi04.jpg",
   "../assets/noi/noi05.jpg",
   "../assets/noi/noi06.jpg",
-  "../assets/noi/noi07.jpg",
+  "../assets/noi/noi07.jpg"
 ];
 
 /* --- TITULOS PT --- */
@@ -254,8 +253,8 @@ const captionsPT=[
   "Ouvimos o Corpo",
   "Dueto com o Silêncio",
   "A Música em Circulação",
-  "Intervalo do Gesto"
-  "O Corpo como Partitura"
+  "Intervalo do Gesto",
+  "O Corpo como Partitura",
   "Epílogo"
 ];
 
