--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ footer{
       <a href="./projects/project-4.html">A Última Noite</a>
       <a href="./projects/project-3.html">Dentro do Som</a>
       <a href="./projects/structures-of-permanence.html">Structures of Permanence</a>
-      <a href="./projects/noi.html">Entre o Gesto e o Silêncio</a>
+      <a href="./projects/noi.html">Entre o Gesto e o Som</a>
     </div>
 
     <!-- EN -->
@@ -149,7 +149,7 @@ footer{
       <a href="./projects/project-4.html">Last Night</a>
       <a href="./projects/project-3.html">Inside the Sound</a>
       <a href="./projects/structures-of-permanence.html">Structures of Permanence</a>
-      <a href="./projects/noi.html">Between Gesture and Silence</a>
+      <a href="./projects/noi.html">Between Gesture and Sound</a>
     </div>
 
   </div>
