--- a/projects/noi.html
+++ b/projects/noi.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>From Blue Walls to White Silence — Pedro Cruz</title>
+<title>Entre o Gesto e o Som — Pedro Cruz</title>
 
 <style>
 *{box-sizing:border-box}
