--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@ footer {
 
   <!-- ENGLISH -->
   <div class="lang-en">
-    <p>I was born in 1971. Photography entered my life early, not as a simple act of recording, but as a space for experimentation and observation.</p>
+    <p>I was born in 1971. Photography entered my life somewhere in the past, not as a simple act of recording, but as a space for experimentation and observation.</p>
 
     <p>I have always been more interested in the process than in capturing the instant, exploring the possibilities of error, the unfolding of time, and the materiality of the image.</p>
 
@@ -123,7 +123,7 @@ footer {
 <footer>
   © 2025 — Pedro Cruz
   <p style="margin-top:8px; font-size:.8rem; opacity:.7;">
-    Contact: <a href="mailto:pedroemcasa@gmail.com" style="color:#eaeaea; text-decoration:none;">pedroemcasa@gmail.com</a>
+    Contact: <a href="mailto:pedrosoaresdacruz@gmail.com" style="color:#eaeaea; text-decoration:none;">pedroemcasa@gmail.com</a>
   </p>
 </footer>
 
